--- a/deployment/database/aurora/aurora-global-primary-cluster.yml
+++ b/deployment/database/aurora/aurora-global-primary-cluster.yml
@@ -67,6 +67,11 @@ Resources:
     Properties:
       VpcId: !Sub '{{resolve:secretsmanager:VpcId-${AWS::Region}${Env}}}'
       GroupDescription: Access to aurora mysql database
+      SecurityGroupEgress: 
+        - 
+          CidrIp: "0.0.0.0/0"
+          Description: "Allow all egress"
+          IpProtocol: "-1"
       Tags:
         - Key: Name
           Value: aurora-mysql-security-group
