--- a/deployment/windows.yaml
+++ b/deployment/windows.yaml
@@ -16,6 +16,10 @@ Parameters:
     Type: String
     Default: t3.small
     ConstraintDescription: must be a valid EC2 instance type.
+  KmsKey:
+    Type: AWS::SSM::Parameter::Value<String>
+    Default: KmsKey
+    Description: CMK Id 
 
 Resources:
   IamInstanceRole:
@@ -46,6 +50,8 @@ Resources:
     Type: "AWS::SecretsManager::Secret"
     Properties:
       Name: !Sub 'mr-app-windowspassword-${AWS::Region}${Env}'
+      Description: "Password for the Windows Administrator"
+      KmsKeyId: !Ref KmsKey
       GenerateSecretString: 
         PasswordLength: 15
         ExcludePunctuation: true
