--- a/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
+++ b/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
@@ -66,7 +66,9 @@ Resources:
             Version: '2012-10-17'
             Statement:
               - Effect: Allow
-                Action: ["rds:*"]
+                Action: 
+                  - "rds:CopyDBClusterSnapshot"
+                  - "rds:DescribeDBClusterSnapshots"
                 Resource: 
                   - !Sub '{{resolve:secretsmanager:mr-app/orders-${SourceRegion}-${GlobalClusterIdentifier}${Env}}}'                  
                   - Fn::Join:
