--- a/deployment/database/dynamodb/global-table.yml
+++ b/deployment/database/dynamodb/global-table.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: '(SO9169) Global Resources Stack'
+Description: 'DDB Global Resources Stack'
 Transform:
   - AWS::LanguageExtensions
 Parameters:
