--- a/deployment/regionalVpc.yaml
+++ b/deployment/regionalVpc.yaml
@@ -213,19 +213,62 @@ Resources:
       Description: "retail-store-ar CMK"
       KeyUsage: "ENCRYPT_DECRYPT"
       KeyPolicy: !Sub |
+        {
+          "Version" : "2012-10-17",
+          "Id" : "key-default-1",
+          "Statement" : [ 
+            {
+            "Sid" : "Enable IAM User Permissions",
+            "Effect" : "Allow",
+            "Principal" : {
+              "AWS" : "arn:aws:iam::${AWS::AccountId}:root"
+            },
+            "Action" : "kms:*",
+            "Resource" : "*"
+          },
           {
-            "Version" : "2012-10-17",
-            "Id" : "key-default-1",
-            "Statement" : [ {
-              "Sid" : "Enable IAM User Permissions",
-              "Effect" : "Allow",
-              "Principal" : {
-                "AWS" : "arn:aws:iam::${AWS::AccountId}:root"
+            "Sid": "Allow access through AWS Secrets Manager for all principals in the account that are authorized to use AWS Secrets Manager",
+            "Effect": "Allow",
+            "Principal": {
+              "AWS": [
+                "*"
+              ]
+            },
+            "Action": [
+              "kms:Encrypt",
+              "kms:Decrypt",
+              "kms:ReEncrypt*",
+              "kms:CreateGrant",
+              "kms:DescribeKey"
+            ],
+            "Resource": "*",
+            "Condition": {
+              "StringEquals": {
+                "kms:CallerAccount": "${AWS::AccountId}",
+                "kms:ViaService": "secretsmanager.${AWS::Region}.amazonaws.com"
+              }
+            }
+          },
+          {
+            "Sid": "Allow access through AWS Secrets Manager for all principals in the account that are authorized to use AWS Secrets Manager",
+            "Effect": "Allow",
+            "Principal": {
+              "AWS": [
+                "*"
+              ]
+            },
+            "Action": "kms:GenerateDataKey*",
+            "Resource": "*",
+            "Condition": {
+              "StringEquals": {
+                "kms:CallerAccount": "${AWS::AccountId}"
               },
-              "Action" : "kms:*",
-              "Resource" : "*"
-            } ]
-          }
+              "StringLike": {
+                "kms:ViaService": "secretsmanager.${AWS::Region}.amazonaws.com"
+              }
+            }
+          } ]
+        }   
       KeySpec: "SYMMETRIC_DEFAULT"
       MultiRegion: false
   KmsKeyParam:
