--- a/deployment/windows.yaml
+++ b/deployment/windows.yaml
@@ -88,6 +88,10 @@ Resources:
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
   VPCEndpointSSMSecurityGroupIngress:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
